# bot-fohl-openai

./: .gitignore  .pytest.ini  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/scripts/: pull-request-guard.py
.github/workflows/: continuous-deployment.yml  continuous-integration.yml  pull-request-guard.yml  run-test.yml
reports/: test_report.html
src/: lambda_function.py
src/core/: __init__.py  convention.py
src/telegram_bot/: __init__.py  fohlfeh.py  parsers.py  poco.py
src/transformers/: __init__.py  gpt.py
src/utils/: __init__.py  logging.py  tools.py
tests/unit/core/: test_tools.py
tools/aws-lambda-layers/: generate.ps1
